# actix_poc_scylla

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  diesel.toml  docker-compose.yaml  pipeline.toml
migrations/2025-03-10-104105_create_users/: up.sql
migrations/2025-03-14-200058_create_users/: up.sql
migrations/2025-03-15-142423_create_accounts/: up.sql
migrations/2025-03-15-200939_create_teams_organizations/: down.sql  up.sql
migrations/2025-03-17-100335_create_repositories/: up.sql
migrations/2025-03-17-101329_index_users_accounts_teams_repos/: down.sql  up.sql
migrations/2025-03-17-111002_update_repositories/: down.sql  up.sql
migrations/2025-03-17-231141_create_verification_tokens/: up.sql
migrations/2025-03-20-135337_create_reset_password_token/: down.sql  up.sql
src/: config.rs  db.rs  main.rs  models.rs  routes.rs  schema.rs
src/api/: mod.rs
src/api/pipeline/: mod.rs
src/api/user/: mod.rs
src/models/: account.rs  mod.rs  organization.rs  repo.rs  reset_password_token.rs  team.rs  user.rs  verification_token.rs
src/modules/: mod.rs
src/modules/auth/: dto.rs  handler.rs  handlers.rs  mod.rs  models.rs  repository.rs  routes.rs  service.rs
src/modules/organization/: dto.rs  handler.rs  mod.rs  repository.rs  routes.rs  service.rs
src/modules/repo/: dto.rs  handler.rs  repository.rs  routes.rs  service.rs
src/modules/team/: dto.rs  handler.rs  repository.rs  routes.rs  service.rs
src/modules/user/: dto.rs  handler.rs  repository.rs  routes.rs  service.rs
src/utils/: mod.rs  password.rs  response.rs
