[package]
name = "actix_poc_scylla"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
actix-cors = "0.6.4"
actix-session = { version = "0.10.1", features = ["redis-session"] }
actix-identity = "0.8.0"
diesel = { version = "2.2.8", features = ["postgres_backend", "postgres", "uuid", "r2d2", "chrono", "serde_json"] }
dotenv = "0.15.0"
uuid = { version = "1.15.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
env_logger = "0.11.7"
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
utoipa = { version = "5.3.1", features = ["actix_extras", "uuid", "chrono"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = ["serde"] }
validator = { version = "0.20.0",  features = ["derive"]}
thiserror = "1.0.56"
log = "0.4.20"
regex = "1.8.3"
lettre = "0.11.1"
lettre_email = "0.9.4"
rand = "0.8.5"